--- a/fraudDetection.ipynb
+++ b/fraudDetection.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "id": "iSjSPRXiRQuI"
       },
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "wYoVO3FrguFn"
       },
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "id": "thNVhMYcTASW"
       },
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "id": "xC0d40aB3uGG",
         "colab": {
@@ -468,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "JTnXf7-Z2UzN",
         "colab": {
@@ -778,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "id": "quhyL2WSgrX7",
         "colab": {
@@ -816,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "KwG6iF08ikTk",
         "colab": {
@@ -856,7 +856,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "Rzj4_M3V6zLF",
         "colab": {
@@ -902,7 +902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "2U50sqcWhmsV",
         "colab": {
@@ -1216,7 +1216,7 @@
         "id": "W8PqGOkPYGm9",
         "outputId": "fa33f2d5-1412-4d0c-d21f-9cc74516d9b2"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1561,7 +1561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "-qR-Hpd7iuoF"
       },
@@ -1591,7 +1591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "yKrH6LbkiyGK",
         "colab": {
@@ -1627,7 +1627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "JVVdtpkp6r4V",
         "colab": {
@@ -1674,7 +1674,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "2agctAGYAEd5",
         "colab": {
@@ -2045,7 +2045,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "id": "E5a3x5Qlj1eb",
         "colab": {
@@ -2083,7 +2083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "XfqVxIEkmeAO"
       },
@@ -2108,7 +2108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "id": "GxeoVxccnT_9",
         "colab": {
@@ -2490,7 +2490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "id": "vn7GvQhEnWWp",
         "colab": {
@@ -2525,7 +2525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2555,7 +2555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "TICjky2Hqc0D",
         "colab": {
@@ -2593,7 +2593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2986,7 +2986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "Z8aYaDZRn72y"
       },
@@ -3017,7 +3017,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "PHEn5NB2oBnX"
       },
@@ -3065,7 +3065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3499,7 +3499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "id": "cOTWLlZaqOP0"
       },
@@ -3523,7 +3523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3554,7 +3554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3603,7 +3603,7 @@
         "id": "6qZPUp6TiT2D",
         "outputId": "6ee061f7-b142-4935-cb2a-1b99d94b439a"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3630,7 +3630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "OkdEYm02qrU0"
       },
@@ -3648,7 +3648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3695,7 +3695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3769,7 +3769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3836,7 +3836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3912,7 +3912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "id": "sFfAZlQDrQAb"
       },
@@ -3929,7 +3929,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "id": "RdgTcDHirmpK"
       },
@@ -3979,7 +3979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4018,7 +4018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "metadata": {
         "id": "WYdxvC56r0i4"
       },
@@ -4036,7 +4036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4061,7 +4061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "metadata": {
         "id": "xjYCYlbmr8BV",
         "colab": {
@@ -4115,7 +4115,7 @@
         "id": "8HclnKAzWiXC",
         "outputId": "3a309fb2-b8ca-4559-d057-1d7eb8532ec6"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4455,7 +4455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "metadata": {
         "id": "K6NOTqRHr-oA",
         "colab": {
@@ -4808,7 +4808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {
         "id": "ccCAMjbrsBK1",
         "colab": {
@@ -5179,7 +5179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": null,
       "metadata": {
         "id": "9A7_0wtfsD8d"
       },
@@ -5190,7 +5190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "metadata": {
         "id": "IzvlVI_VsIpb"
       },
@@ -5202,7 +5202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "metadata": {
         "id": "Y7ncW6mZsKx_"
       },
@@ -5231,7 +5231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": null,
       "metadata": {
         "id": "jL6RHnausPcH",
         "colab": {
@@ -5535,7 +5535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": null,
       "metadata": {
         "id": "cYog2kSTsakj",
         "colab": {
@@ -5815,7 +5815,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": null,
       "metadata": {
         "id": "qtX09Ptpujgi",
         "colab": {
@@ -6095,7 +6095,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "metadata": {
         "id": "7Ui_Bk1MulOl",
         "colab": {
@@ -6618,7 +6618,7 @@
         "id": "Y0NKtMWNT5D9",
         "outputId": "7fc172be-8bf0-41f3-e1c0-0f0150673045"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6645,7 +6645,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "id": "EIv6OBKkuny9",
         "colab": {
@@ -6676,13 +6676,18 @@
         "t = (10 * probsBest_recall[:, 1]).astype(int)\n",
         "unique, counts = np.unique(t, return_counts=True)\n",
         "\n",
-        "print(np.asarray((unique, counts)).T)\n",
-        "\n",
-        "#recommended:\n",
-        "#green: 1 - 3 pass\n",
-        "#grey: 4-7 need manual investigation\n",
-        "#red: 8,9 decline"
+        "print(np.asarray((unique, counts)).T)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The above result states the probability of a user to have a fraud activity. The company can divide the whole group into three parts,\n",
+        "0\\~4 represent normal users, 5\\~7 means further investigation is needed, 8\\~10 can be directly rejected."
+      ],
+      "metadata": {
+        "id": "UeTlnDck3lP-"
+      }
     }
   ],
   "metadata": {
